--- a/404.md
+++ b/404.md
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: 404
+title: 404 Not Found
 permalink: /404/
 ---
 
-Seems like either you couldn't find what you were looking for,
-or we messed up somewhere ¯\_(ツ)_/¯
+Seems like either you couldn't find what you were looking for,  
+or we messed up somewhere `¯\_(ツ)_/¯`
