--- a/404.md
+++ b/404.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: 404 Not Found
-permalink: /404/
+permalink: /404.html
 ---
 
 Seems like either you couldn't find what you were looking for,  
