Changed blog post

--- a/_posts/2017-04-17-kickoff.md
+++ b/_posts/2017-04-17-kickoff.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Welcome to Fresh Brewed Web"
+title:  "Kicking Off a More Vocal Chapter"
 description: "Up until now, our website has acted (and even resembled) more of a business card than a website. That's about to change. We want to keep you up to date with what we're doing."
 date:   2017-04-17 9:00:00 -0500
 categories: news
